<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="hello">Hello World, Resto Menu!</string>
    <string name="app_name">Resto Menu</string>
    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="spinnerPrompt">Select a login...</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="diners">Diners</string>
    <string name="adultdiners">Adults</string>
    <string name="childrendiners">Children</string>
    <string name="menus">Menus</string>
    <string name="drinks">Drinks</string>
    <string name="call">Call the waiter</string>
    <string name="review">Review &amp; Place Order</string>
    <string name="paybill">Pay the bill</string>
    <string name="settings">Settings</string>
    <string name="tableList">Table list</string>
    <string name="addNote">Add a note</string>
    <string name="noteHeader">Add a note for cook or waiter</string>
    <string name="waiterNotified">Waiter notified</string>
    <string name="alacarte">A la carte</string>
    <string name="send">Send</string>
    <string name="noitems">No items</string>
    <string name="yes">Yes</string>
    <string name="notyet">Not yet</string>
    <string name="pay">Pay</string>
    <string name="confirm">Confirm</string>
    <string name="delivery">Delivery</string>
    <string name="takeout">Take Out</string>
    <string name="deliveryDate">Date</string>
        
</resources>
