<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" android:background="@color/dialog_background_df"
    android:orientation="vertical" android:padding="20dip">

    <TextView
            android:id="@+id/textHeader"
            android:layout_width="match_parent"  android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/noteHeader" android:textColor="@color/order_header_text" 
            android:background="@color/order_header_background"
            android:textAppearance="?android:attr/textAppearanceMedium" /> 
    
    <EditText
        android:id="@+id/txtNoteDlg"  
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" android:padding="10dip" android:imeOptions="flagNoExtractUi"
        android:text="Medium Text" android:textColor="@color/dialog_text_df" 
        android:minLines="5" android:width="300dip" android:gravity="top"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout  android:layout_width="wrap_content" 
    android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
    <Button
        android:id="@+id/btnNoteOK" android:layout_marginTop="20dip"
        android:layout_width="wrap_content" android:textSize="20sp" android:padding="10dip"
        android:layout_height="wrap_content"
        android:text="@string/btnOK" style="@style/button_df"/>
    
     <Button
        android:id="@+id/btnNoteCancel" android:layout_marginTop="20dip"
        android:layout_width="wrap_content" android:textSize="20sp" android:padding="10dip"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel" style="@style/button_df"/>
     
    </LinearLayout>

</LinearLayout>
