<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:padding="10dip"
    android:orientation="vertical" android:background="@color/dialog_background_df">
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="5dip">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliveryDate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dialog_text_df" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:padding="5dip">

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:padding="5dip">
            
        </TableRow>
		<TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:padding="5dip">

			<Button android:layout_margin="5dip"
			    android:id="@+id/deliveryBtnOk"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/btnOK" style="@style/button_df"/>

			<Button android:layout_margin="5dip"
			    android:id="@+id/deliveryBtnCancel" 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/btnCancel" style="@style/button_df"/>
		    
        </TableRow>       
    </TableLayout>
    
     <TableLayout
        android:id="@+id/tableLayout2" android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="5dip">
		
		<TextView android:layout_width="wrap_content" android:gravity="center" android:textSize="18sp" 
		    android:textStyle="bold"
            android:layout_height="wrap_content" android:layout_gravity="center" android:text="@string/diners"
            android:textColor="@color/dialog_text_df"/>
        <TableRow
            android:id="@+id/tableRow1" android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:padding="5dip">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textColor="@color/dialog_text_df"
                android:text="@string/adultdiners" android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <com.peppermint.restomenu.app.NumberPicker 
				android:id="@+id/adultnumpick" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:layout_gravity="center_horizontal" />
            
		</TableRow>
		<TableRow 
            android:id="@+id/tableRow2"  android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:padding="5dip">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textColor="@color/dialog_text_df"
                android:text="@string/childrendiners" android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <com.peppermint.restomenu.app.NumberPicker
				android:id="@+id/childrennumpick" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:layout_gravity="center_horizontal" />
            
		</TableRow>
		<TableRow
            android:id="@+id/tableRow3" android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:padding="5dip">

			<Button
			    android:id="@+id/lgndinersbtnOK" android:layout_span="2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/btnOK" style="@style/button_df"/>
			</TableRow>
	</TableLayout>
    <LinearLayout 
	android:id="@+id/spinnerloginll" android:layout_height="wrap_content" 
	android:layout_width="match_parent"  android:gravity="center">
		<ProgressBar android:id="@+id/pBarLogin" android:background="@drawable/button_df"
			android:layout_width="wrap_content" android:layout_gravity="center" android:padding="20dip"
		    android:layout_height="wrap_content" android:visibility="gone"/>
			
 	</LinearLayout>

</LinearLayout>
